<resources>
    <string name="app_name">teacher</string>
    <string name="login">登陆</string>
    <string name="CustomerService_phone">客服电话：12556185</string>
    <string name="ForgetPassword">忘记密码？</string>
    <string name="hint_phone">请输入您的帐号</string>
    <string name="hint_password">请输入密码</string>
    <string name="album">相册</string>
    <string name="photograph">拍照</string>
    <string name="cancle">取消</string>
    <string name="power_success">权限获取成功</string>
    <string name="password">1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="zhanghao">1234567890</string>
    <string name="blank_name">姓名不能为空</string>
    <string name="noblank_name">姓名长度为2-5个字</string>
    <string name="supplenameinfo">完善姓名信息</string>
    <string name="selecter_school">选择学校</string>

</resources>
