<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/zhuti"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingLeft="20dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="账 号"
            android:textColor="#333333"
            android:textSize="16dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:paddingBottom="5dp">

            <EditText
                android:id="@+id/login_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:singleLine="true"
                android:digits="@string/zhanghao"
                android:hint="@string/hint_phone"
                android:textColorHint="#dcdcdc"
                android:inputType="phone"
                android:textSize="16dp" />

            <ImageView
                android:id="@+id/iv_clear_phone"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/clear"
                android:visibility="gone" />
        </RelativeLayout>

    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ebebeb" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingLeft="20dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="密 码"
            android:textColor="#333333"
            android:textSize="16dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:paddingBottom="5dp">

            <EditText
                android:id="@+id/login_pasw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_password"
                android:digits="@string/password"
                android:inputType="textPassword"
                android:textColorHint="#dcdcdc"
                android:textSize="16dp" />

            <ImageView
                android:id="@+id/iv_clear_pasw"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/clear"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:clickable="false"
        android:enabled="false"
        android:id="@+id/login_btn"
        style="@style/loginbtn"
        android:text="@string/login"
        android:textColor="@color/bt_noseleter_text"
        android:textSize="18dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="18dp">



        <TextView
            android:id="@+id/get_sms_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="#00000000"
            android:text="@string/ForgetPassword"
            android:textColor="#5e89ef"
            android:textSize="14dp" />
    </RelativeLayout>


</LinearLayout>